# site-checker.rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  reports.sh
.github/workflows/: ci.yml
site/: config.yaml  izrael.szabgab.com.html  site-checker.code-maven.com.html
site/pages/: about.md  index.md  starting-the-project.md
site/reports/: izrael.szabgab.com.html  izrael.szabgab.com.json  site-checker.code-maven.com.html  site-checker.code-maven.com.json  ssg.code-maven.com.html  ssg.code-maven.com.json
src/: json2html.rs  lib.rs  main.rs
templates/: report.html
