[package]
name = "seo-site-checker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple image and banner generator for YouTube thumbnails, Meetups, social networks"
keywords = ["cli", "image", "images", "thumbnail"]
categories = ["images"]
readme = "README.md"
repository = "https://github.com/szabgab/site-checker.rs"
homepage = "https://site-checker.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
liquid = "0.26"
liquid-core = "0.26"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.3"
tokio = "1.32"


[[bin]]
name = "json2html"
path = "src/json2html.rs"
